@@ -1,32 +1,25 @@
 package com.ssapick.server.domain.pick.service;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.Random;
-import java.util.stream.Collectors;
-
-import org.springframework.context.ApplicationEventPublisher;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
-import com.ssapick.server.domain.pick.dto.UserData;
 import com.ssapick.server.domain.pick.entity.Hint;
 import com.ssapick.server.domain.pick.entity.HintOpen;
 import com.ssapick.server.domain.pick.entity.HintType;
 import com.ssapick.server.domain.pick.entity.Pick;
 import com.ssapick.server.domain.pick.repository.HintRepository;
 import com.ssapick.server.domain.pick.repository.PickRepository;
-import com.ssapick.server.domain.user.entity.Campus;
 import com.ssapick.server.domain.user.entity.PickcoLogType;
-import com.ssapick.server.domain.user.entity.Profile;
-import com.ssapick.server.domain.user.entity.User;
 import com.ssapick.server.domain.user.event.PickcoEvent;
-import com.ssapick.server.domain.user.repository.CampusRepository;
-import com.ssapick.server.domain.user.repository.ProfileRepository;
-import com.ssapick.server.domain.user.repository.UserRepository;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.time.LocalDate;
+import java.util.List;
+import java.util.Random;
+import java.util.stream.Collectors;
+
+import static com.ssapick.server.core.constants.PickConst.HINT_OPEN_COIN;
 
 @Slf4j
 @Service
@@ -35,11 +28,10 @@ import lombok.extern.slf4j.Slf4j;
 public class HintService {
 	private final HintRepository hintRepository;
 	private final PickRepository pickRepository;
-	private final UserRepository userRepository;
-	private final CampusRepository campusRepository;
-	private final ProfileRepository profileRepository;
+
 	private final ApplicationEventPublisher publisher;
 
+	@Transactional
 	public String getRandomHintByPickId(Long pickId) {
 		Pick pick = pickRepository.findPickWithHintsById(pickId).orElseThrow(
 			() -> new IllegalArgumentException("Pick이 존재하지 않습니다.")
@@ -52,6 +44,14 @@ public class HintService {
 		log.info("유저 아이디: {}", pick.getSender());
 
 		List<Hint> hints = hintRepository.findAllByUserId(pick.getSender().getId());
+		hints.removeIf(hint -> hint.getHintType().equals(HintType.GENDER));
+		hints.removeIf(hint -> hint.getHintType().equals(HintType.CAMPUS_NAME));
+		// test
+		// hints.removeIf(hint -> hint.getHintType().equals(HintType.CAMPUS_SECTION));
+		// hints.removeIf(hint -> hint.getHintType().equals(HintType.INTEREST));
+		// hints.removeIf(hint -> hint.getHintType().equals(HintType.MAJOR));
+		// hints.removeIf(hint -> hint.getHintType().equals(HintType.RESIDENTIAL_AREA));
+		//
 		List<Long> availableHints = getAvailableHintIds(pick, hints);
 
 		log.info("힌트 아이디: {}", availableHints);
@@ -60,20 +60,32 @@ public class HintService {
 
 		Hint openHint = findHintById(hints, openHintId);
 
-		addHintOpenToPick(pick, openHint);
-
-		publisher.publishEvent(new PickcoEvent(
-			pick.getSender(),
-			PickcoLogType.HINT_OPEN,
-			-1,
-			pick.getSender().getProfile().getPickco()
-		));
-
 		String hintContent = openHint.getContent();
 
-		if (openHint.getHintType().equals(HintType.NAME)) {
-			hintContent = processNameHint(hintContent);
+		switch (openHint.getHintType()) {
+			case NAME -> {
+				hintContent = processNameHint(hintContent);
+			}
+			case AGE -> {
+				int birthYear = Integer.parseInt(hintContent.split("-")[0]);
+				int age = LocalDate.now().getYear() - birthYear + 1;
+				hintContent = age + "세";
+			}
+			case COHORT -> {
+				hintContent = hintContent + "기";
+			}
+			case CAMPUS_NAME -> {
+				hintContent = hintContent + "캠퍼스";
+			}
+			case CAMPUS_SECTION -> {
+				hintContent = hintContent + "반";
+			}
 		}
+
+		addHintOpenToPick(pick, openHint, hintContent);
+
+		publisher.publishEvent(new PickcoEvent(
+				pick.getReceiver(), PickcoLogType.HINT_OPEN, HINT_OPEN_COIN));
 
 		return hintContent;
 	}
@@ -101,10 +113,11 @@ public class HintService {
 			.orElseThrow(() -> new IllegalArgumentException("힌트를 찾을 수 없습니다."));
 	}
 
-	public void addHintOpenToPick(Pick pick, Hint openHint) {
+	public void addHintOpenToPick(Pick pick, Hint openHint, String content) {
 		HintOpen hintOpen = HintOpen.builder()
 			.hint(openHint)
 			.pick(pick)
+			.content(content)
 			.build();
 		pick.getHintOpens().add(hintOpen);
 	}
@@ -121,64 +134,6 @@ public class HintService {
 		return pick.getHintOpens();
 	}
 
-	@Transactional
-	public void saveHint(User user, UserData.Update request) {
-
-		if (user == null) {
-			throw new IllegalArgumentException("유저 정보가 없습니다.");
-		}
-
-		user.updateName(request.getName());
-		user.updateGender(request.getGender());
-
-		Profile profile = user.getProfile();
-		if (profile != null) {
-			Campus campus = profile.getCampus();
-			if (campus != null) {
-				campus = Campus.createCampus(request.getCampusName(), request.getCampusSection(),
-					campus.getDescription());
-			} else {
-				campus = Campus.createCampus(request.getCampusName(), request.getCampusSection(), null);
-			}
-			profile = Profile.createProfile(user, request.getChort(), campus, request.getProfileImage());
-		} else {
-			Campus campus = Campus.createCampus(request.getCampusName(), request.getCampusSection(), null);
-			profile = Profile.createProfile(user, request.getChort(), campus, null);
-		}
-
-		campusRepository.save(profile.getCampus());
-		profileRepository.save(profile);
-		user.updateProfile(profile);
-		userRepository.save(user);
-
-		List<Hint> hints = List.of(
-			Hint.createHint(user, request.getName(), HintType.NAME),
-			Hint.createHint(user, String.valueOf(request.getGender()), HintType.GENDER),
-			Hint.createHint(user, String.valueOf(request.getChort()), HintType.CHORT),
-			Hint.createHint(user, request.getCampusName(), HintType.CAMPUS_NAME),
-			Hint.createHint(user, String.valueOf(request.getCampusSection()), HintType.CAMPUS_SECTION),
-			Hint.createHint(user, request.getMbti(), HintType.MBTI),
-			Hint.createHint(user, request.getMajor(), HintType.MAJOR),
-			Hint.createHint(user, request.getBirth(), HintType.AGE),
-			Hint.createHint(user, request.getResidentialArea(), HintType.RESIDENTIAL_AREA),
-			Hint.createHint(user, request.getInterest(), HintType.INTEREST)
-		);
-
-		for (Hint hint : hints) {
-			Optional<Hint> existingHintOptional = hintRepository.findByUserIdAndHintType(user.getId(),
-				hint.getHintType());
-			if (existingHintOptional.isPresent()) {
-				Hint existingHint = existingHintOptional.get();
-				if (!existingHint.getContent().equals(hint.getContent())) {
-					existingHint.updateContent(hint.getContent());
-					hintRepository.save(existingHint);
-				}
-			} else {
-				hintRepository.save(hint);
-			}
-		}
-	}
-
 	private String processNameHint(String name) {
 		StringBuilder result = new StringBuilder();
 		Random random = new Random();
@@ -188,7 +143,7 @@ public class HintService {
 		List<Character> initials = name.substring(1).chars()
 			.mapToObj(c -> (char)c)
 			.map(this::getInitialConsonant)
-			.collect(Collectors.toList());
+			.toList();
 
 		int revealIndex = random.nextInt(initials.size());
 
@@ -216,5 +171,4 @@ public class HintService {
 		}
 		return 'X';
 	}
-
 }
